# carma-vehicle-model-framework

./: README.md
.circleci/: config.yml
.github/workflows/: ci.yml
.sonarqube/: sonar-scanner.properties
lib_vehicle_model/: CMakeLists.txt  package.xml
lib_vehicle_model/include/lib_vehicle_model/: KinematicsProperty.h  KinematicsSolver.h  LibVehicleModel.h  ModelAccessException.h  ODESolver.h  ParameterServer.h  ROSParameterServer.h  VehicleControlInput.h  VehicleModelControlInput.h  VehicleMotionModel.h  VehicleState.h
lib_vehicle_model/include/lib_vehicle_model/internal/: ODESolver.cpp
lib_vehicle_model/src/lib_vehicle_model/: ConstraintChecker.cpp  ConstraintChecker.h  KinematicsProperty.cpp  KinematicsSolver.cpp  LibVehicleModel.cpp  ModelAccessException.cpp  ModelLoader.cpp  ModelLoader.h  ODESolver.cpp  ROSParameterServer.cpp
lib_vehicle_model/test/: ConstraintCheckerTest.cpp  KinematicsSolverTest.cpp  LibVehicleModelTest.cpp  ModelLoaderTest.cpp  ODESolverTest.cpp
lib_vehicle_model/test/test_libs/: README.md
mock_vehicle_model_shared_lib/: CMakeLists.txt  package.xml
mock_vehicle_model_shared_lib/include/: MockVehicleModel.h
mock_vehicle_model_shared_lib/src/: EntryPoint.cpp  MockVehicleModel.cpp
mock_vehicle_model_user/: CMakeLists.txt  package.xml
mock_vehicle_model_user/include/: MockVehicleModelUser.h
mock_vehicle_model_user/launch/: mock_vehicle_model_user.launch  mock_vehicle_model_user_dynamic_car.launch
mock_vehicle_model_user/src/mock_vehicle_model_user/: MockVehicleModelUser.cpp  MockVehicleModelUser.h  main.cpp
model_test_tools/: CMakeLists.txt  package.xml
model_test_tools/include/model_test_tools/: TestHelper.h
passenger_car_dynamic_model/: CMakeLists.txt  README.md  package.xml
passenger_car_dynamic_model/include/passenger_car_dynamic_model/: PassengerCarDynamicModel.h  TwoStepLagModel.h  TwoStepPID.h
passenger_car_dynamic_model/src/passenger_car_dynamic_model/: EntryPoint.cpp  PassengerCarDynamicModel.cpp  PassengerCarDynamicModel_Copy.cpp  TwoStepLagModel.cpp  TwoStepPID.cpp
passenger_car_dynamic_model/test/: PassengerCarDynamicModelTest.cpp  TestEntryPoint.cpp
passenger_car_dynamic_model/test/data/: _2019-09-30-12-19-17_steer_new_test1.bag
passenger_car_dynamic_model/test/passenger_car_dynamic_model/: PassengerCarDynamicModelTest.cpp  TestHelper.h  TwoStepLagModelTest.cpp  TwoStepPIDTest.cpp
passenger_car_kinematic_model/: CMakeLists.txt  README.md  package.xml
passenger_car_kinematic_model/include/passenger_car_kinematic_model/: PassengerCarKinematicModel.h
passenger_car_kinematic_model/src/passenger_car_kinematic_model/: EntryPoint.cpp  PassengerCarKinematicModel.cpp
passenger_car_kinematic_model/test/: TestEntryPoint.cpp
passenger_car_kinematic_model/test/data/: _2019-10-03-17-11-49_full_loop_validation_filtered.bag  _2019-10-30-11-57-22_5mps_6s.bag  _2019-10-30-11-57-22_5mps_6s_filtered.bag
passenger_car_kinematic_model/test/passenger_car_kinematic_model/: PassengerCarKinematicModelTest.cpp
temp_filter_node/: CMakeLists.txt  package.xml
temp_filter_node/cfg/: Filter.cfg
temp_filter_node/src/temp_filter_node/: main.cpp
