<?xml version="1.0"?>
<package format = "3">
  <name>lib_vehicle_model</name>
  <version>2.1.0</version>
  <description>
    The vehicle model library provides a mechanism for modeling vehicle behavior based on real world physical properties of each vehicle.
    Other components give the model a vehicle starting state and command input or sequence of command inputs
    and get back an ending state or list of traversed states.
  </description>
  <maintainer email="carma@todo.todo">carma</maintainer>
  <license>Apache 2.0</license>
  <author email="carma@todo.todo">carma</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
