<?xml version="1.0"?>
<package>
  <name>mock_vehicle_model_shared_lib</name>
  <version>1.0.0</version>
  <description>
    Example package demonstrating how to create a vehicle model shared library for use with the lib_vehicle_model package
  </description>
  <maintainer email="carma@todo.todo">carma</maintainer>
  <license>Apache 2.0</license>
  <author email="carma@todo.todo">carma</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>lib_vehicle_model</build_depend>
  <run_depend>lib_vehicle_model</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
