<?xml version="1.0"?>
<package format = "3">
  <name>mock_vehicle_model_shared_lib</name>
  <version>2.1.0</version>
  <description>
    Example package demonstrating how to create a vehicle model shared library for use with the lib_vehicle_model package
  </description>
  <maintainer email="carma@todo.todo">carma</maintainer>
  <license>Apache 2.0</license>
  <author email="carma@todo.todo">carma</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>lib_vehicle_model</depend>
  <build_depend>carma_cmake_common</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
