<?xml version="1.0"?>
<package>
  <name>mock_vehicle_model_user</name>
  <version>1.0.0</version>
  <description>Node demonstrating basic use of the lib_vehicle_model package by leveraging the mock_vehicle_model_shared_lib</description>
  <maintainer email="carma@todo.todo">carma</maintainer>
  <license>Apache 2.0</license>
  <author email="carma@todo.todo">carma</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>lib_vehicle_model</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>lib_vehicle_model</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
