<?xml version="1.0"?>
<package format = "3">
  <name>mock_vehicle_model_user</name>
  <version>2.1.0</version>
  <description>Node demonstrating basic use of the lib_vehicle_model package by leveraging the mock_vehicle_model_shared_lib</description>
  <maintainer email="carma@todo.todo">carma</maintainer>
  <license>Apache 2.0</license>
  <author email="carma@todo.todo">carma</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>lib_vehicle_model</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>carma_cmake_common</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
